--- a/index.html
+++ b/index.html
@@ -46,9 +46,20 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Christian S.T.E.M. Education Group<br />
-								Bitterroot Valley, Montana</h1>
-								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
+								<h1>Christian S.T.E.M. Education Group</h1>
+								<h2>Bitterroot Valley, Montana</h2>
+								<span class="image main"><img src="images/2425_3217_Montana_Bitterroot_Mountains_lg.jpg" alt="" /></span>
+								<p>	Great Father, <br />
+									Thank you for the beautiful gift of our children. <br />
+									We seek your guidance as we teach them to be strong, intelligent and wise.<br />
+									Please guide us today in all of our decisions,<br />
+									Forgive us in the areas we fall short, <br />
+									And grant us your grace to forgive others. <br />
+									Protect us from pride and selfishness, <br />
+									And lead us to your peace and salvation. <br />
+									All of our successes and achievements are yours, <br />
+									Today and forever. <br />
+									Amen.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
