--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>CSEG-Home</title>
+		<title>CSEG-Contact</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -10,17 +10,15 @@
 	<body class="is-preload">
 		<!-- Wrapper -->
 			<div id="wrapper">
-
 				<!-- Header -->
 					<header id="header">
 						<div class="inner">
-
 							<!-- Logo -->
 								<a href="index.html" class="logo">
 									<span class="symbol"><img src="images/Christ-Led.png" alt="" /></span>
-									<span class="title" style="letter-spacing: 0.15em; font-weight: 800;">Christ Led</span>
+									<span class="title" style="letter-spacing: 0.15em; font-weight: 800;">Share each other's burdens and in this way fulfill the law of Christ.</span>
 								</a>
-
+								
 							<!-- Nav -->
 								<nav>
 									<ul>
@@ -47,22 +45,18 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<header>
-								<h1>Christian S.T.E.M. Education Group</h1>
-								<h2 style="letter-spacing: 0.15em; font-weight: 800;">Bitterroot Valley, Montana</h2>
-								<span class="image main"><img src="images/2425_3217_Montana_Bitterroot_Mountains_lg.jpg" alt="" /></span>
-								<p>	Great Father, <br />
-									Thank you for the beautiful gift of our children. <br />
-									We seek your guidance in teaching them to be strong, intelligent and wise.<br />
-									Please guide us today in all of our decisions,<br />
-									Forgive us in the areas we fall short, <br />
-									And grant us your grace to forgive others. <br />
-									Protect us from pride and selfishness, <br />
-									And lead us to your peace and salvation. <br />
-									All of our successes and achievements are yours, <br />
-									Today and forever. <br />
-									Amen.</p>
-							</header>
+							<h1>Contact</h1>
+							<p>Cameron DePalma, Owner & Director</p>
+							<p>director@cseg-bv.org</p>
+							<p>(406) 544-0081</p>
+						</div>
+						<br />
+						<div class="inner">
+							<h1>Location</h1>
+							<p>Hamilton Assembly of God</p>
+							<p>601 W Main St</p>
+							<p>Hamilton, MT</p>
+							
 						</div>
 					</div>
 
