--- a/membership.html
+++ b/membership.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>CSEG-Home</title>
+		<title>CSEG-Membership</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -10,17 +10,15 @@
 	<body class="is-preload">
 		<!-- Wrapper -->
 			<div id="wrapper">
-
 				<!-- Header -->
 					<header id="header">
 						<div class="inner">
-
 							<!-- Logo -->
 								<a href="index.html" class="logo">
 									<span class="symbol"><img src="images/Christ-Led.png" alt="" /></span>
-									<span class="title" style="letter-spacing: 0.15em; font-weight: 800;">Christ Led</span>
+									<span class="title" style="letter-spacing: 0.15em; font-weight: 800; ">For who would begin construction without first counting the cost for completion?</span>
 								</a>
-
+								
 							<!-- Nav -->
 								<nav>
 									<ul>
@@ -47,22 +45,53 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<header>
-								<h1>Christian S.T.E.M. Education Group</h1>
-								<h2 style="letter-spacing: 0.15em; font-weight: 800;">Bitterroot Valley, Montana</h2>
-								<span class="image main"><img src="images/2425_3217_Montana_Bitterroot_Mountains_lg.jpg" alt="" /></span>
-								<p>	Great Father, <br />
-									Thank you for the beautiful gift of our children. <br />
-									We seek your guidance in teaching them to be strong, intelligent and wise.<br />
-									Please guide us today in all of our decisions,<br />
-									Forgive us in the areas we fall short, <br />
-									And grant us your grace to forgive others. <br />
-									Protect us from pride and selfishness, <br />
-									And lead us to your peace and salvation. <br />
-									All of our successes and achievements are yours, <br />
-									Today and forever. <br />
-									Amen.</p>
-							</header>
+							<h1>Membership</h1>
+							<p>Membership is for students ages 12-18 years of age (7th-12th grade equivalent)</p>
+							<p>Enrollment occurs prior to the beginning of each semester</p>
+							<p>Attendance is not required, but students are expected to keep up with the curriculum schedule</p>
+							<br />
+							<section>
+								<h1>Fees</h1>
+								<div class="table-wrapper">
+									<table class="alt">
+										<thead>
+											<tr>
+												<th>Name</th>
+												<th>Description</th>
+												<th>Fee</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td>Facility Fee</td>
+												<td>Rent for facility use during the semester</td>
+												<td>TBD</td>
+											</tr>
+											<tr>
+												<td>Liability Insurance Fee</td>
+												<td>Liability insurance applied to the entire family onsite at the facility (and not only enrolled students)</td>
+												<td>TBD</td>
+											</tr>
+											<tr>
+												<td>Curriculum Fee</td>
+												<td>Curriculum & lab kits are purchased separately (individual kits are required for attendance by each enrolled student)</td>
+												<td>---</td>
+											</tr>
+											<tr>
+												<td>Program Fee</td>
+												<td>CSEG Program Fee (this may increase in the future if we need to hire additional tutors)</td>
+												<td>$50</td>
+											</tr>
+										</tbody>
+										<tfoot>
+											<tr>
+												<td colspan="2"></td>
+												<td>TBD</td>
+											</tr>
+										</tfoot>
+									</table>
+								</div>
+							</section>
 						</div>
 					</div>
 
