--- a/schedule.html
+++ b/schedule.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>CSEG-Home</title>
+		<title>CSEG-Schedule</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -10,17 +10,15 @@
 	<body class="is-preload">
 		<!-- Wrapper -->
 			<div id="wrapper">
-
 				<!-- Header -->
 					<header id="header">
 						<div class="inner">
-
 							<!-- Logo -->
 								<a href="index.html" class="logo">
 									<span class="symbol"><img src="images/Christ-Led.png" alt="" /></span>
-									<span class="title" style="letter-spacing: 0.15em; font-weight: 800;">Christ Led</span>
+									<span class="title" style="letter-spacing: 0.15em; font-weight: 800; ">Teach the wise and they will become wiser; teach the righteous and their knowledge will increase.</span>
 								</a>
-
+								
 							<!-- Nav -->
 								<nav>
 									<ul>
@@ -47,22 +45,10 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<header>
-								<h1>Christian S.T.E.M. Education Group</h1>
-								<h2 style="letter-spacing: 0.15em; font-weight: 800;">Bitterroot Valley, Montana</h2>
-								<span class="image main"><img src="images/2425_3217_Montana_Bitterroot_Mountains_lg.jpg" alt="" /></span>
-								<p>	Great Father, <br />
-									Thank you for the beautiful gift of our children. <br />
-									We seek your guidance in teaching them to be strong, intelligent and wise.<br />
-									Please guide us today in all of our decisions,<br />
-									Forgive us in the areas we fall short, <br />
-									And grant us your grace to forgive others. <br />
-									Protect us from pride and selfishness, <br />
-									And lead us to your peace and salvation. <br />
-									All of our successes and achievements are yours, <br />
-									Today and forever. <br />
-									Amen.</p>
-							</header>
+							<h1>Generic Page</h1>
+							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpi</p>
+							
 						</div>
 					</div>
 
