--- a/guidelines.html
+++ b/guidelines.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>CSEG-Generic</title>
+		<title>CSEG-Guidelines</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,7 +15,8 @@
 						<div class="inner">
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/Christ-Led.png" alt="" /></span><span class="title"></span>
+									<span class="symbol"><img src="images/Christ-Led.png" alt="" /></span>
+									<span class="title" style="letter-spacing: 0.15em; font-weight: 800; ">In everything do unto others as you would have them do unto you.</span>
 								</a>
 								
 							<!-- Nav -->
@@ -44,10 +45,22 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Generic Page</h1>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpi</p>
-							
+							<h1>Guidelines</h1>
+							<p>Christian, faith-based educational program.</p>
+							<br />
+							<p>Appropriate attire & behavior is required.</p>
+							<br />
+							<p>Parents are required to be onsite during classes.</p>
+							<br />
+							<p>Parents and infants (under 4 years of age) may attend classes, if space is available.</p>
+							<br />
+							<p>Each student must have their own curriculum & lab kits.</p>
+							<br />
+							<p>Pre-enrollment is required each semester.</p>
+							<br />
+							<p>Attendance is not required, but students are expected to keep up with the curriculum schedule.</p>
+							<br />
+							<p>Our program partners with the CC F/E program held on the same day at the facility, allowing parents access to the childcare, playground, sanctuary & library.</p>
 						</div>
 					</div>
 
