--- a/membership.html
+++ b/membership.html
@@ -46,9 +46,9 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Membership</h1>
-							<p>Membership is for students ages 12-18 years of age (7th-12th grade equivalent)</p>
-							<p>Enrollment occurs prior to the beginning of each semester</p>
-							<p>Attendance is not required, but students are expected to keep up with the curriculum schedule</p>
+							<p>Membership is for students ages 12-18 years of age (7th-12th grade equivalent).</p>
+							<p>Enrollment occurs prior to the beginning of each semester.</p>
+							<p>Attendance is not required, but students are expected to keep up with the curriculum schedule.</p>
 							<br />
 							<section>
 								<h1>Fees</h1>
