--- a/schedule.html
+++ b/schedule.html
@@ -45,10 +45,53 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Generic Page</h1>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpi</p>
-							
+							<h1>Schedule</h1>
+							<section>
+								<h3 style="letter-spacing: 0.15em;">Classes held weekly, 15 weeks per semester (Beginning Sep 2025)</h6>
+								<div class="table-wrapper">
+									<table class="alt">
+										<thead>
+											<tr>
+												<th>Activity</th>
+												<th>Description</th>
+												<th>Times</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td>S.T.E.M. Assembly</td>
+												<td>Opening prayer & announcements</td>
+												<td>12:50-1:00pm</td>
+											</tr>
+											<tr>
+												<td>Science</td>
+												<td>Biology, Chemistry, Physics, etc. (details TBD)</td>
+												<td>1:00-1:50pm</td>
+											</tr>
+											<tr>
+												<td>Technology/Engineering</td>
+												<td>Aerospace, Computer Science, Artificial Intelligence, etc. (details TBD)</td>
+												<td>2:00-2:50pm</td>
+											</tr>
+											<tr>
+												<td>Hybrid Mathematics - Group Activity</td>
+												<td>Group mathematics lessons - all levels (no required curriculum)</td>
+												<td>3:00-3:30pm</td>
+											</tr>
+											<tr>
+												<td>Hybrid Mathematics - Individual Tutoring</td>
+												<td>Independent study & tutoring (students use their own curriculum)</td>
+												<td>3:30-4:00pm</td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+							</section>
+							<br />
+							<h1>Curriculum</h1>
+							<p>Science & Technology/Engineering classes will have required curriculum (details TBD) which will include lab kits on certain dates. A detailed calendar of each week's lessons & required lab kits will be provided.</p>
+							<br />
+							<p>The hybrid mathematics group activity accommodates students of all levels (arithmetic thru calculus), allowing students to grow at their own level while in a group setting with peers. In the hybrid mathematics tutoring session students independently work on their own curriculum with tutors available for help.</p>
 						</div>
 					</div>
 
