--- a/guidelines.html
+++ b/guidelines.html
@@ -60,13 +60,63 @@
 							<br />
 							<p>Attendance is not required, but students are expected to keep up with the curriculum schedule.</p>
 							<br />
-							<p>Our program partners with the CC F/E program held on the same day at the facility, allowing parents access to the childcare, playground, sanctuary & library.</p>
+							<p>Our program partners with the CC F/E program held on the same day at the same facility, allowing parents access to the childcare & playground.</p>
 						</div>
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
+							<section class="tiles">
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="index.html">
+										<h2 style="font-size:100%">Home</h2>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="guidelines.html">
+										<h2 style="font-size:100%">Guidelines & Policies</h2>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="schedule.html">
+										<h2 style="font-size:100%">Schedule & Curriculum</h2>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="membership.html">
+										<h2 style="font-size:100%">Membership & Fees</h2>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="contact.html">
+										<h2 style="font-size:100%">Contact & Location</h2>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="extracurricular.html">
+										<h2 style="font-size:100%">Extra Curricular Activities</h2>
+									</a>
+								</article>
+							</section>
 							<ul class="copyright">
 								<li>&copy; Christian S.T.E.M. Education Group (CSEG). All rights reserved.</li>
 							</ul>
