--- a/index.html
+++ b/index.html
@@ -51,17 +51,63 @@
 								<h1>Christian S.T.E.M. Education Group</h1>
 								<h2 style="letter-spacing: 0.15em; font-weight: 800;">Bitterroot Valley, Montana</h2>
 								<span class="image main"><img src="images/2425_3217_Montana_Bitterroot_Mountains_lg.jpg" alt="" /></span>
-								<p>	Great Father, <br />
-									Thank you for the beautiful gift of our children. <br />
-									We seek your guidance in teaching them to be strong, intelligent and wise.<br />
-									Please guide us today in all of our decisions,<br />
-									Forgive us in the areas we fall short, <br />
-									And grant us your grace to forgive others. <br />
-									Protect us from pride and selfishness, <br />
-									And lead us to your peace and salvation. <br />
-									All of our successes and achievements are yours, <br />
-									Today and forever. <br />
-									Amen.</p>
+								<p style="font-size: 110%">	Great Father, thank you for the beautiful gift of our children. 
+									 We seek your guidance in teaching them to be strong, intelligent and wise.
+									 Please guide us today in all of our decisions,
+									 forgive us in the areas we fall short,
+									 and grant us your grace to forgive others.
+									 Protect us from pride and selfishness,
+									 and lead us to your peace and salvation.
+									 All of our successes and achievements are yours,
+									 today and forever. Amen.
+								</p>
+								<br />
+								<br />
+								<p style="font-size: 130%">
+								Welcome! 
+								<br />
+								We're a local homeschool family with young children (Kindergarten-6th grade) enrolled in the <a href="https://classicalconversations.com/community-search/?cid=r5N&program=Foundations"><b>Classical Conversations (CC) Foundations & Essentials (F/E)</b></a> program. 
+								<br />
+								Instead of continuing with the CC Challenge program we're creating a separate, independent homeschool program for 7-12th graders with the following principles: 
+								<ul>
+									<li style="font-size: 130%"><b>Christian-based</b></li>
+									<li style="font-size: 130%"><b>Partnership with CC F/E Director</b></li>
+									<ul style="padding-left: 1em;margin: 0 0 0 0;">
+										<li style="list-style: none;font-size: 110%;">
+											Our goal is support parents in our homeschool community who wish to keep their K-6th grade students in the CC F/E program, but who wish to enroll their 7-12th grade students in our S.T.E.M. & Companion programs.
+											We hope to offer weekly classes on the same day and in the same facility as the CC F/E program (but without interfering with the CC program).
+										</li>
+									</ul>
+									<li style="font-size: 130%"><b>Complete 7-12th Grade Curriculum</b></li>
+									<ul style="padding-left: 1em;margin: 0 0 0 0;">
+										<li style="list-style: none;font-size: 110%;">Morning Companion program (non-S.T.E.M.) covering language arts, history, geography, civics, etc.</li>
+										<li style="list-style: none;font-size: 110%;">Afternoon S.T.E.M. program covering mathematics, core sciences and technology/engineering.</li>
+									</ul>
+									<li style="font-size: 130%"><b>Enrollment & Attendance Flexibility</b></li>
+									<ul style="padding-left: 1em;margin: 0 0 0 0;">
+										<li style="list-style: none;font-size: 110%;">Students can enroll in only the S.T.E.M program, only the Companion program, or both.</li>
+										<li style="list-style: none;font-size: 110%;">Enrolled students can take an a la carte approach to attending classes in their program.  For example, a student enrolled in the S.T.E.M program could decide to only attend the core sciences & technology/engineering classes, but not the mathematics class.</li>
+										<li style="list-style: none;font-size: 110%;">Attendance is not required, but students are expected to keep up with the curriculum schedule.</li>
+									</ul>
+									<li style="font-size: 130%"><b>Low Cost</b></li>
+									<ul style="padding-left: 1em;margin: 0 0 0 0;">
+										<li style="list-style: none;font-size: 110%;">
+											We are operating as a not-for-profit organization to serve our local homeschool community.
+											Program fees will only be collected to cover liability insurance, facility rent & tutor salaries. 
+										</li>
+										<li style="list-style: none;font-size: 110%;">
+											Required curriculum & lab kits are purchased separately by the student.
+										</li>
+									</ul>
+									<li style="font-size: 130%"><b>Extra Curricular Activities</b></li>
+									<ul style="padding-left: 1em;margin: 0 0 0 0;">
+										<li style="list-style: none;font-size: 110%;">
+											We would like to provide an informational resource for extra curricular activities in our community such as family field trips & science fairs.
+											We also have skilled parents in our community who would like to offer workshops in welding, woodworking, etc., out of their home or business, and we'd like to provide an information resource for these workshops. 
+										</li>
+									</ul>
+								</ul>  
+								</p>
 							</header>
 						</div>
 					</div>
@@ -69,6 +115,56 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
+							<section class="tiles">
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="index.html">
+										<h2 style="font-size:100%">Home</h2>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="guidelines.html">
+										<h2 style="font-size:100%">Guidelines & Policies</h2>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="schedule.html">
+										<h2 style="font-size:100%">Schedule & Curriculum</h2>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="membership.html">
+										<h2 style="font-size:100%">Membership & Fees</h2>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="contact.html">
+										<h2 style="font-size:100%">Contact & Location</h2>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="extracurricular.html">
+										<h2 style="font-size:100%">Extra Curricular Activities</h2>
+									</a>
+								</article>
+							</section>
 							<ul class="copyright">
 								<li>&copy; Christian S.T.E.M. Education Group (CSEG). All rights reserved.</li>
 							</ul>
