--- a/membership.html
+++ b/membership.html
@@ -69,19 +69,25 @@
 											</tr>
 											<tr>
 												<td>Liability Insurance Fee</td>
-												<td>Liability insurance applied to the entire family onsite at the facility (and not only enrolled students)</td>
+												<td>Liability insurance applies to the entire family onsite at the facility (and not only enrolled students)</td>
 												<td>TBD</td>
 											</tr>
 											<tr>
-												<td>Curriculum Fee</td>
-												<td>Curriculum & lab kits are purchased separately (individual kits are required for attendance by each enrolled student)</td>
-												<td>---</td>
+												<td>Companion Program Fee</td>
+												<td>Program fee for the morning Companion Program (non-S.T.E.M. classes)</td>
+												<td>TBD</td>
 											</tr>
 											<tr>
-												<td>Program Fee</td>
-												<td>CSEG Program Fee (this may increase in the future if we need to hire additional tutors)</td>
-												<td>$50</td>
+												<td>S.T.E.M. Program Fee</td>
+												<td>Program fee for the afternoon S.T.E.M Program</td>
+												<td>TBD</td>
 											</tr>
+											<tr>
+												<td>Curriculum</td>
+												<td>Curriculum & lab kits are purchased separately (individual kits are required for each enrolled student)</td>
+												<td>---</td>
+											</tr>
+											
 										</tbody>
 										<tfoot>
 											<tr>
@@ -98,6 +104,56 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
+							<section class="tiles">
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="index.html">
+										<h2 style="font-size:100%">Home</h2>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="guidelines.html">
+										<h2 style="font-size:100%">Guidelines & Policies</h2>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="schedule.html">
+										<h2 style="font-size:100%">Schedule & Curriculum</h2>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="membership.html">
+										<h2 style="font-size:100%">Membership & Fees</h2>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="contact.html">
+										<h2 style="font-size:100%">Contact & Location</h2>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="extracurricular.html">
+										<h2 style="font-size:100%">Extra Curricular Activities</h2>
+									</a>
+								</article>
+							</section>
 							<ul class="copyright">
 								<li>&copy; Christian S.T.E.M. Education Group (CSEG). All rights reserved.</li>
 							</ul>
