--- a/schedule.html
+++ b/schedule.html
@@ -16,7 +16,7 @@
 							<!-- Logo -->
 								<a href="index.html" class="logo">
 									<span class="symbol"><img src="images/Christ-Led.png" alt="" /></span>
-									<span class="title" style="letter-spacing: 0.15em; font-weight: 800; ">Teach the wise and they will become wiser; teach the righteous and their knowledge will increase.</span>
+									<span class="title" style="letter-spacing: 0.15em; font-weight: 800; ">Teach the wise and they will become even wiser.</span>
 								</a>
 								
 							<!-- Nav -->
@@ -59,12 +59,37 @@
 										</thead>
 										<tbody>
 											<tr>
+												<td>Logic</td>
+												<td>Introductory logic covering syllogisms & fallacies</td>
+												<td>8:30-9:00am</td>
+											</tr>
+											<tr>
+												<td>Language Arts</td>
+												<td>Reading Comphrehension & Writing</td>
+												<td>9:00-9:50am</td>
+											</tr>
+											<tr>
+												<td>History & Geography</td>
+												<td>Ancient & modern history including world geography</td>
+												<td>10:00-10:50am</td>
+											</tr>
+											<tr>
+												<td>Public Speaking & Debate</td>
+												<td>Critical thinking, debate skills & mock trial preparation</td>
+												<td>11:00am-12:00pm</td>
+											</tr>
+											<tr>
+												<td><b>Lunchtime Break</b></td>
+												<td><b>Break between morning Companion Program & afternoon S.T.E.M. Program</b></td>
+												<td><b>12:00pm-12:50pm</b></td>
+											</tr>
+											<tr>
 												<td>S.T.E.M. Assembly</td>
 												<td>Opening prayer & announcements</td>
 												<td>12:50-1:00pm</td>
 											</tr>
 											<tr>
-												<td>Science</td>
+												<td>Core Science</td>
 												<td>Biology, Chemistry, Physics, etc. (details TBD)</td>
 												<td>1:00-1:50pm</td>
 											</tr>
@@ -89,7 +114,9 @@
 							</section>
 							<br />
 							<h1>Curriculum</h1>
-							<p>Science & Technology/Engineering classes will have required curriculum (details TBD) which will include lab kits on certain dates. A detailed calendar of each week's lessons & required lab kits will be provided.</p>
+							<p>Morning Companion classes will have required curriculum (details TBD). A detailed calendar of each week's lessons will be provided, and students will participate in a mock trial at the end of the semester..</p>
+							<br />
+							<p>Afternoon S.T.E.M. classes will have required curriculum (details TBD) which will include lab kits on certain dates. A detailed calendar of each week's lessons & required lab kits will be provided.</p>
 							<br />
 							<p>The hybrid mathematics group activity accommodates students of all levels (arithmetic thru calculus), allowing students to grow at their own level while in a group setting with peers. In the hybrid mathematics tutoring session students independently work on their own curriculum with tutors available for help.</p>
 						</div>
@@ -98,6 +125,56 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
+							<section class="tiles">
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="index.html">
+										<h2 style="font-size:100%">Home</h2>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="guidelines.html">
+										<h2 style="font-size:100%">Guidelines & Policies</h2>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="schedule.html">
+										<h2 style="font-size:100%">Schedule & Curriculum</h2>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="membership.html">
+										<h2 style="font-size:100%">Membership & Fees</h2>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="contact.html">
+										<h2 style="font-size:100%">Contact & Location</h2>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="extracurricular.html">
+										<h2 style="font-size:100%">Extra Curricular Activities</h2>
+									</a>
+								</article>
+							</section>
 							<ul class="copyright">
 								<li>&copy; Christian S.T.E.M. Education Group (CSEG). All rights reserved.</li>
 							</ul>
