--- a/contact.html
+++ b/contact.html
@@ -47,12 +47,16 @@
 						<div class="inner">
 							<h1>Contact</h1>
 							<p>Cameron DePalma, Owner & Director</p>
-							<p>director@cseg-bv.org</p>
+							<p>owner@cseg-bv.org</p>
 							<p>(406) 544-0081</p>
+							<br />
+							<p>Elijah DePalma, S.T.E.M. Director</p>
+							<p>director@cseg-bv.org</p>
+							<p>(406) 544-1106</p>
 						</div>
 						<br />
 						<div class="inner">
-							<h1>Location</h1>
+							<h1>Location <span style="font-size:50%;">Pending Approval</span> </h1>
 							<p>Hamilton Assembly of God</p>
 							<p>601 W Main St</p>
 							<p>Hamilton, MT</p>
@@ -63,6 +67,56 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
+							<section class="tiles">
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="index.html">
+										<h2 style="font-size:100%">Home</h2>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="guidelines.html">
+										<h2 style="font-size:100%">Guidelines & Policies</h2>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="schedule.html">
+										<h2 style="font-size:100%">Schedule & Curriculum</h2>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="membership.html">
+										<h2 style="font-size:100%">Membership & Fees</h2>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="contact.html">
+										<h2 style="font-size:100%">Contact & Location</h2>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="extracurricular.html">
+										<h2 style="font-size:100%">Extra Curricular Activities</h2>
+									</a>
+								</article>
+							</section>
 							<ul class="copyright">
 								<li>&copy; Christian S.T.E.M. Education Group (CSEG). All rights reserved.</li>
 							</ul>
