--- a/membership.html
+++ b/membership.html
@@ -48,6 +48,7 @@
 							<h1>Membership</h1>
 							<p>Membership is for students ages 12-18 years of age (7th-12th grade equivalent).</p>
 							<p>Enrollment occurs prior to the beginning of each semester.</p>
+							<p>Enrolled students can take an a la carte approach to attending classes in their program.</p>
 							<p>Attendance is not required, but students are expected to keep up with the curriculum schedule.</p>
 							<br />
 							<section>
