--- a/schedule.html
+++ b/schedule.html
@@ -80,7 +80,7 @@
 											</tr>
 											<tr>
 												<td><b>Lunchtime Break</b></td>
-												<td><b>Break between morning Companion Program & afternoon S.T.E.M. Program</b></td>
+												<td><b>Break between Companion Program & S.T.E.M. Program</b></td>
 												<td><b>12:00pm-12:50pm</b></td>
 											</tr>
 											<tr>
