--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 									<li style="font-size: 130%"><b>Enrollment & Attendance Flexibility</b></li>
 									<ul style="padding-left: 1em;margin: 0 0 0 0;">
 										<li style="list-style: none;font-size: 110%;">Students can enroll in only the S.T.E.M program, only the Companion program, or both.</li>
-										<li style="list-style: none;font-size: 110%;">Enrolled students can take an a la carte approach to attending classes in their program.  For example, a student enrolled in the S.T.E.M program could decide to only attend the core sciences & technology/engineering classes, but not the mathematics class.</li>
+										<li style="list-style: none;font-size: 110%;">Enrolled students can take an a la carte approach to attending classes in their program.  For example, a student enrolled in the S.T.E.M program could attend only the core sciences & technology/engineering classes, but not the mathematics class.</li>
 										<li style="list-style: none;font-size: 110%;">Attendance is not required, but students are expected to keep up with the curriculum schedule.</li>
 									</ul>
 									<li style="font-size: 130%"><b>Low Cost</b></li>
@@ -103,7 +103,7 @@
 									<ul style="padding-left: 1em;margin: 0 0 0 0;">
 										<li style="list-style: none;font-size: 110%;">
 											We would like to provide an informational resource for extra curricular activities in our community such as family field trips & science fairs.
-											We also have skilled parents in our community who would like to offer workshops in welding, woodworking, etc., out of their home or business, and we'd like to provide an information resource for these workshops. 
+											We also have skilled parents in our community who would like to offer workshops in welding, woodworking, etc., in their home or business, and we'd like to provide an information resource for these workshops. 
 										</li>
 									</ul>
 								</ul>  
