--- a/membership.html
+++ b/membership.html
@@ -85,7 +85,7 @@
 											</tr>
 											<tr>
 												<td>Curriculum</td>
-												<td>Curriculum & lab kits are purchased separately (individual kits are required for each enrolled student)</td>
+												<td>Curriculum & lab kits are purchased separately (individual lab kits are required for each enrolled student)</td>
 												<td>---</td>
 											</tr>
 											
