--- a/schedule.html
+++ b/schedule.html
@@ -114,7 +114,7 @@
 							</section>
 							<br />
 							<h1>Curriculum</h1>
-							<p>Morning Companion classes will have required curriculum (details TBD). A detailed calendar of each week's lessons will be provided, and students will participate in a mock trial at the end of the semester..</p>
+							<p>Morning Companion classes will have required curriculum (details TBD). A detailed calendar of each week's lessons will be provided, and students will participate in a mock trial at the end of the semester.</p>
 							<br />
 							<p>Afternoon S.T.E.M. classes will have required curriculum (details TBD) which will include lab kits on certain dates. A detailed calendar of each week's lessons & required lab kits will be provided.</p>
 							<br />
