--- a/schedule.html
+++ b/schedule.html
@@ -90,12 +90,12 @@
 											</tr>
 											<tr>
 												<td>Core Science</td>
-												<td>Biology, Chemistry, Physics, etc. (details TBD)</td>
+												<td>Biology, Chemistry & Physics</td>
 												<td>1:00-1:50pm</td>
 											</tr>
 											<tr>
 												<td>Technology/Engineering</td>
-												<td>Aerospace, Computer Science, Artificial Intelligence, etc. (details TBD)</td>
+												<td>Aerospace, Computer Science, Artificial Intelligence, etc.</td>
 												<td>2:00-2:50pm</td>
 											</tr>
 											<tr>
