Update Contact verse

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 							<!-- Logo -->
 								<a href="index.html" class="logo">
 									<span class="symbol"><img src="images/Christ-Led.png" alt="" /></span>
-									<span class="title" style="letter-spacing: 0.15em; font-weight: 800;">Share each other's burdens and in this way fulfill the law of Christ.</span>
+									<span class="title" style="letter-spacing: 0.15em; font-weight: 800;">This is my commandment, that you love one another as I have loved you.</span>
 								</a>
 								
 							<!-- Nav -->
