--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 											We hope to offer weekly classes on the same day and in the same facility as the CC F/E program (but without interfering with the CC program).
 										</li>
 									</ul>
-									<li style="font-size: 130%"><b>Complete 7-12th Grade Curriculum</b></li>
+									<li style="font-size: 130%"><b>Comprehensive 7-12th Grade Curriculum</b></li>
 									<ul style="padding-left: 1em;margin: 0 0 0 0;">
 										<li style="list-style: none;font-size: 110%;">Morning Companion program (non-S.T.E.M.) covering language arts, history, geography, civics, etc.</li>
 										<li style="list-style: none;font-size: 110%;">Afternoon S.T.E.M. program covering mathematics, core sciences and technology/engineering.</li>
