--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
 								Welcome! 
 								<br />
 								We're a local homeschool family with young children (Kindergarten-6th grade) enrolled in the <a href="https://classicalconversations.com/community-search/?cid=r5N&program=Foundations"><b>Classical Conversations (CC) Foundations & Essentials (F/E)</b></a> program. 
-								<br />
 								Instead of continuing with the CC Challenge program we're creating a separate, independent homeschool program for 7-12th graders with the following principles: 
 								<ul>
 									<li style="font-size: 130%"><b>Christian-based</b></li>
@@ -80,7 +79,7 @@
 									</ul>
 									<li style="font-size: 130%"><b>Comprehensive 7-12th Grade Curriculum</b></li>
 									<ul style="padding-left: 1em;margin: 0 0 0 0;">
-										<li style="list-style: none;font-size: 110%;">Morning Companion program (non-S.T.E.M.) covering language arts, history, geography, civics, etc.</li>
+										<li style="list-style: none;font-size: 110%;">Morning Companion program (non-S.T.E.M.) covering language arts, history, geography, public speaking, etc.</li>
 										<li style="list-style: none;font-size: 110%;">Afternoon S.T.E.M. program covering mathematics, core sciences and technology/engineering.</li>
 									</ul>
 									<li style="font-size: 130%"><b>Enrollment & Attendance Flexibility</b></li>
@@ -102,8 +101,8 @@
 									<li style="font-size: 130%"><b>Extra Curricular Activities</b></li>
 									<ul style="padding-left: 1em;margin: 0 0 0 0;">
 										<li style="list-style: none;font-size: 110%;">
-											We would like to provide an informational resource for extra curricular activities in our community such as family field trips & science fairs.
-											We also have skilled parents in our community who would like to offer workshops in welding, woodworking, etc., in their home or business, and we'd like to provide an information resource for these workshops. 
+											We would like to be an information resource for extra curricular activities in our community such as family field trips & science fairs.
+											We also have skilled parents in our community who would like to offer workshops on welding, woodworking, etc., in their home or business, and we'd like to provide information for these workshops. 
 										</li>
 									</ul>
 								</ul>  
