--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 									<li style="font-size: 130%"><b>Partnership with CC F/E Director</b></li>
 									<ul style="padding-left: 1em;margin: 0 0 0 0;">
 										<li style="list-style: none;font-size: 110%;">
-											Our goal is support parents in our homeschool community who wish to keep their K-6th grade students in the CC F/E program, but who wish to enroll their 7-12th grade students in our S.T.E.M. & Companion programs.
+											Our goal is to support parents in our homeschool community who wish to keep their K-6th grade students in the CC F/E program, but who wish to enroll their 7-12th grade students in our S.T.E.M. & Companion programs.
 											We hope to offer weekly classes on the same day and in the same facility as the CC F/E program (but without interfering with the CC program).
 										</li>
 									</ul>
